etc/tests/error/type/strict-heterogeneous-dict.ny
;; flags: --strict-types
;; expect: hm-strict-heterogeneous-dict
use std.core

def cfg = {"name": "ny", "version": 1}
print(cfg)
